// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyResults > should render with custom title and subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex h-full flex-col justify-center bg-theme-background text-center"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="mb-4 text-lg font-bold"
      >
        No results
      </div>
      <div
        class="text-md mb-8"
      >
        No results found. Refine your search and try again.
      </div>
      <div
        class="mx-auto w-full max-w-lg"
      >
        <svg
          viewBox="0 0 385 135.22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="images"
            transform="translate(0 1.013)"
          >
            <path
              d="M3 84V65H0v-2h3v-4h2v4h38v-1h2v1h38V25H61v-2h22V0h2v23h2v2h-2v38h16v2H85v6h-2v-6H45v10h-2V65H5v19z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 15"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_15"
              transform="translate(275 50.206)"
            />
            <path
              d="M16 84V61h-2v-2h2V21H0v-2h16v-6h2v6h38V9h2v10h38V0h2v19h3v2h-3v4h-2v-4H58v23h-2V21H18v38h22v2H18v23z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 17"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_17"
              transform="translate(6 6.206)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
              transform="translate(117 21.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              transform="translate(0 61.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
              transform="translate(354.001 30.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              transform="translate(375 69.206)"
            />
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 88"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_88"
              transform="translate(344 .207)"
            >
              <rect
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12"
                fill="none"
                height="97"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12"
                rx="7.5"
                width="15"
              />
            </g>
            <g
              data-name="1"
              fill="none"
              id="_1"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(49 60.207)"
            >
              <path
                d="M315 862.014v-44.3a4.011 4.011 0 0 1 8 0v34.6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke-linecap="round"
                transform="translate(-305 -814)"
              />
              <path
                d="M309 840v-13.614a2.5 2.5 0 0 1 4.985 0V840"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-307 -814)"
              />
              <path
                d="M315.006 846.009a2.853 2.853 0 0 1-3.016-2.963v-4.056"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-305 -814)"
              />
              <path
                d="M316.989 853.009h0a8.039 8.039 0 0 1-7.989-8.088v-8.913"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-307 -814)"
              />
              <path
                d="M329 845v-7.562a2.494 2.494 0 0 0-4.987 0V845"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-303 -814)"
              />
              <path
                d="M323 851.08a2.865 2.865 0 0 0 3.011-2.993v-4.1"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-305 -814)"
              />
              <path
                d="M320.986 857.015h0a8.053 8.053 0 0 0 8.014-8.091v-8.916"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-303 -814)"
              />
              <path
                d="M0 0h27"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1268 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1268_\\u043A\\u043E\\u043F\\u0438\\u044F"
                transform="translate(0 49.99)"
              />
              <path
                d="M0 5V0"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1267"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1267"
                transform="translate(16 45)"
              />
            </g>
            <g
              data-name="1 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(157 60.207)"
            >
              <path
                d="M423 862.014v-44.3a4.011 4.011 0 0 1 8 0v34.6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                stroke-linecap="round"
                transform="translate(-413 -814)"
              />
              <path
                d="M417 840v-13.614a2.5 2.5 0 0 1 4.985 0V840"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-415 -814)"
              />
              <path
                d="M423.006 846.009a2.853 2.853 0 0 1-3.016-2.963v-4.056"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-413 -814)"
              />
              <path
                d="M424.989 853.009h0a8.039 8.039 0 0 1-7.989-8.088v-8.913"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-415 -814)"
              />
              <path
                d="M437 845v-7.562a2.494 2.494 0 0 0-4.987 0V845"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-411 -814)"
              />
              <path
                d="M431 851.015a2.839 2.839 0 0 0 2.983-2.966v-4.059"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-413 -814)"
              />
              <path
                d="M428.986 857.015h0a8.053 8.053 0 0 0 8.014-8.091v-8.916"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-411 -814)"
              />
              <path
                d="M0 0h27"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1268 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1268_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                transform="translate(0 49.99)"
              />
              <path
                d="M0 5V0"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1267"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1267-2"
                transform="translate(18 45)"
              />
            </g>
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 83"
              fill="none"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_83"
              stroke-width="2"
              transform="translate(70 100.207)"
            >
              <path
                d="M0 0h137"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
                stroke="#212225"
                transform="translate(116 10)"
              />
              <path
                d="M0 0h78"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#dbdee5"
                transform="translate(28 10)"
              />
              <path
                d="M0 0h18"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                stroke="#dbdee5"
                transform="translate(0 10)"
              />
              <path
                d="M393 863.5a9.5 9.5 0 0 1 9.5-9.5h4a9.5 9.5 0 0 1 9.5 9.5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13"
                stroke="#dbdee5"
                transform="translate(-327 -854)"
              />
              <path
                d="M363 863a4.788 4.788 0 0 1 4.543-5h1.913a4.788 4.788 0 0 1 4.544 5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#dbdee5"
                transform="translate(-326 -854)"
              />
              <path
                d="M411.017 856h5.662c3.491 0 6.321 3.134 6.321 7"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#dbdee5"
                transform="translate(-326 -854)"
              />
              <path
                d="M488.383 858.562A9.495 9.495 0 0 1 496.5 854h4a9.5 9.5 0 0 1 9.5 9.5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
                stroke="#212225"
                transform="translate(-326 -854)"
              />
              <path
                d="M480 864a5.894 5.894 0 0 1 5.783-6h2.435a5.894 5.894 0 0 1 5.782 6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
                stroke="#212225"
                transform="translate(-326 -854)"
              />
            </g>
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 84"
              fill="none"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_84"
              stroke-linecap="round"
              stroke-width="2"
              transform="translate(76)"
            >
              <path
                d="M332 859a27 27 0 0 1 27-27c14.912 0 27 10.088 27 25"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3724"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3724"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-332 -753.793)"
              />
              <path
                d="M383.865 853.291a100.081 100.081 0 0 1 113.426-98.582 99.721 99.721 0 0 1 36.085 12.177"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3725"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3725"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-330 -753.793)"
              />
              <path
                d="M383.991 852.964a84.613 84.613 0 0 1 .776-10.887c6.294-46.179 49.087-78.546 95.579-72.294"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3725 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3725_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-330 -753.793)"
              />
              <g
                data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 86"
                id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_86"
                stroke="#212225"
                transform="translate(149 15.333)"
              >
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85"
                  transform="translate(0 3.394)"
                >
                  <path
                    d="M497.15 835.749C491.819 829.676 487 820.216 487 811.5a34.5 34.5 0 0 1 62.848-19.669"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722"
                    transform="translate(-481 -772.52)"
                  />
                  <path
                    d="M496.842 835.092C485.225 827.019 482 817.676 482 806.5"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723"
                    transform="translate(-482 -773.52)"
                  />
                  <path
                    d="M487.07 811.534a37.1 37.1 0 0 1 3.167-26.54"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    transform="translate(-481 -769.52)"
                  />
                  <path
                    d="M503.215 782.019a33.124 33.124 0 0 1 23.347-9.5"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                    transform="translate(-481 -772.52)"
                  />
                  <path
                    d="M542.189 791.221c-3.577-2.282-5.2-7.4-11.545-10.889"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                    transform="translate(-486 -775.52)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F"
                  transform="translate(9.746 34.972)"
                >
                  <path
                    d="M559.172 808.355a34.614 34.614 0 1 1-68.426 9.7"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M558.344 804.1c3.985 9.614 4.277 25.473-1.337 35.2"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M554.274 833.642a33.342 33.342 0 0 1-15.22 20.234"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                    transform="translate(-488.746 -807.099)"
                  />
                  <path
                    d="M526.3 849.96a33.161 33.161 0 0 1-25.036-3.436"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M497.449 825.125c1.277 2.463.534 4.911 1.233 8.78.289 1.593 2.827 5.225 2.977 6.614"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                    transform="translate(-490.746 -804.099)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                  transform="translate(17.675)"
                >
                  <path
                    d="M498.675 785.425a34.614 34.614 0 1 1 47.81 49.9"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M499.009 785.382a34.628 34.628 0 0 1 26.054-16.255"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M522.067 774.644a33.341 33.341 0 0 1 25.313.551"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-3"
                    transform="translate(-497.675 -770.127)"
                  />
                  <path
                    d="M551.647 787.841a33.162 33.162 0 0 1 11.821 22.336"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M548.314 825.76c1.925-3.8 4.951-.487 7.641-10.8"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-3"
                    transform="translate(-495.675 -773.127)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                  transform="translate(15 21.866)"
                >
                  <path
                    d="M542.009 830.43a24.574 24.574 0 1 1-33.949-35.42"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M541.772 830.461A24.59 24.59 0 0 1 523.271 842"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M521.139 838.082c-5.677 2.108-8.263 1.969-13.715-.391"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M504.394 828.716A23.534 23.534 0 0 1 496 812.862"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M506.761 801.8c-1.367 2.694-4.351 1.766-7.034 8.352"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M540.646 790.993a20.447 20.447 0 0 1 6.205 12.84 20.2 20.2 0 0 1-17.769 22.245 19.6 19.6 0 0 1-17.074-7.04"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M540.671 791.189A20.366 20.366 0 0 1 550 806.472"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M546.943 803.954a21.976 21.976 0 0 1-.427 15.609"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M539.26 822.065A18.906 18.906 0 0 1 526.442 829"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-3"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M517.5 820.111c2.178 1.129 2.844 4.105 11.1 5.85"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-4"
                    transform="translate(-496 -790.993)"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyResults > should render with no texts 1`] = `
<DocumentFragment>
  <div
    class="flex h-full flex-col justify-center bg-theme-background text-center"
    data-testid="EmptyResults"
  >
    <div>
      <div
        class="mx-auto w-full max-w-lg"
      >
        <svg
          viewBox="0 0 385 135.22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="images"
            transform="translate(0 1.013)"
          >
            <path
              d="M3 84V65H0v-2h3v-4h2v4h38v-1h2v1h38V25H61v-2h22V0h2v23h2v2h-2v38h16v2H85v6h-2v-6H45v10h-2V65H5v19z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 15"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_15"
              transform="translate(275 50.206)"
            />
            <path
              d="M16 84V61h-2v-2h2V21H0v-2h16v-6h2v6h38V9h2v10h38V0h2v19h3v2h-3v4h-2v-4H58v23h-2V21H18v38h22v2H18v23z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 17"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_17"
              transform="translate(6 6.206)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
              transform="translate(117 21.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
              transform="translate(0 61.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
              transform="translate(354.001 30.207)"
            />
            <path
              d="M4 10V6H0V4h4V0h2v4h4v2H6v4z"
              data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
              fill="#dbdee5"
              id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
              transform="translate(375 69.206)"
            />
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 88"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_88"
              transform="translate(344 .207)"
            >
              <rect
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12"
                fill="none"
                height="97"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12"
                rx="7.5"
                width="15"
              />
            </g>
            <g
              data-name="1"
              fill="none"
              id="_1"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(49 60.207)"
            >
              <path
                d="M315 862.014v-44.3a4.011 4.011 0 0 1 8 0v34.6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke-linecap="round"
                transform="translate(-305 -814)"
              />
              <path
                d="M309 840v-13.614a2.5 2.5 0 0 1 4.985 0V840"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-307 -814)"
              />
              <path
                d="M315.006 846.009a2.853 2.853 0 0 1-3.016-2.963v-4.056"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-305 -814)"
              />
              <path
                d="M316.989 853.009h0a8.039 8.039 0 0 1-7.989-8.088v-8.913"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                transform="translate(-307 -814)"
              />
              <path
                d="M329 845v-7.562a2.494 2.494 0 0 0-4.987 0V845"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-303 -814)"
              />
              <path
                d="M323 851.08a2.865 2.865 0 0 0 3.011-2.993v-4.1"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-305 -814)"
              />
              <path
                d="M320.986 857.015h0a8.053 8.053 0 0 0 8.014-8.091v-8.916"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                transform="translate(-303 -814)"
              />
              <path
                d="M0 0h27"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1268 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1268_\\u043A\\u043E\\u043F\\u0438\\u044F"
                transform="translate(0 49.99)"
              />
              <path
                d="M0 5V0"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1267"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1267"
                transform="translate(16 45)"
              />
            </g>
            <g
              data-name="1 \\u043A\\u043E\\u043F\\u0438\\u044F"
              fill="none"
              id="_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
              stroke="#dbdee5"
              stroke-width="2"
              transform="translate(157 60.207)"
            >
              <path
                d="M423 862.014v-44.3a4.011 4.011 0 0 1 8 0v34.6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 12 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_12_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                stroke-linecap="round"
                transform="translate(-413 -814)"
              />
              <path
                d="M417 840v-13.614a2.5 2.5 0 0 1 4.985 0V840"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-415 -814)"
              />
              <path
                d="M423.006 846.009a2.853 2.853 0 0 1-3.016-2.963v-4.056"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-413 -814)"
              />
              <path
                d="M424.989 853.009h0a8.039 8.039 0 0 1-7.989-8.088v-8.913"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                transform="translate(-415 -814)"
              />
              <path
                d="M437 845v-7.562a2.494 2.494 0 0 0-4.987 0V845"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-411 -814)"
              />
              <path
                d="M431 851.015a2.839 2.839 0 0 0 2.983-2.966v-4.059"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 14 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_14_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-413 -814)"
              />
              <path
                d="M428.986 857.015h0a8.053 8.053 0 0 0 8.014-8.091v-8.916"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 15 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_15_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                transform="translate(-411 -814)"
              />
              <path
                d="M0 0h27"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1268 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1268_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                transform="translate(0 49.99)"
              />
              <path
                d="M0 5V0"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1267"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1267-2"
                transform="translate(18 45)"
              />
            </g>
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 83"
              fill="none"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_83"
              stroke-width="2"
              transform="translate(70 100.207)"
            >
              <path
                d="M0 0h137"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
                stroke="#212225"
                transform="translate(116 10)"
              />
              <path
                d="M0 0h78"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#dbdee5"
                transform="translate(28 10)"
              />
              <path
                d="M0 0h18"
                data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                stroke="#dbdee5"
                transform="translate(0 10)"
              />
              <path
                d="M393 863.5a9.5 9.5 0 0 1 9.5-9.5h4a9.5 9.5 0 0 1 9.5 9.5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13"
                stroke="#dbdee5"
                transform="translate(-327 -854)"
              />
              <path
                d="M363 863a4.788 4.788 0 0 1 4.543-5h1.913a4.788 4.788 0 0 1 4.544 5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#dbdee5"
                transform="translate(-326 -854)"
              />
              <path
                d="M411.017 856h5.662c3.491 0 6.321 3.134 6.321 7"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                stroke="#dbdee5"
                transform="translate(-326 -854)"
              />
              <path
                d="M488.383 858.562A9.495 9.495 0 0 1 496.5 854h4a9.5 9.5 0 0 1 9.5 9.5"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
                stroke="#212225"
                transform="translate(-326 -854)"
              />
              <path
                d="M480 864a5.894 5.894 0 0 1 5.783-6h2.435a5.894 5.894 0 0 1 5.782 6"
                data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 13 \\u043A\\u043E\\u043F\\u0438\\u044F 5"
                id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_13_\\u043A\\u043E\\u043F\\u0438\\u044F_5"
                stroke="#212225"
                transform="translate(-326 -854)"
              />
            </g>
            <g
              data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 84"
              fill="none"
              id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_84"
              stroke-linecap="round"
              stroke-width="2"
              transform="translate(76)"
            >
              <path
                d="M332 859a27 27 0 0 1 27-27c14.912 0 27 10.088 27 25"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3724"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3724"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-332 -753.793)"
              />
              <path
                d="M383.865 853.291a100.081 100.081 0 0 1 113.426-98.582 99.721 99.721 0 0 1 36.085 12.177"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3725"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3725"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-330 -753.793)"
              />
              <path
                d="M383.991 852.964a84.613 84.613 0 0 1 .776-10.887c6.294-46.179 49.087-78.546 95.579-72.294"
                data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3725 \\u043A\\u043E\\u043F\\u0438\\u044F"
                id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3725_\\u043A\\u043E\\u043F\\u0438\\u044F"
                stroke="#289548"
                stroke-dasharray="8 4"
                transform="translate(-330 -753.793)"
              />
              <g
                data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 86"
                id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_86"
                stroke="#212225"
                transform="translate(149 15.333)"
              >
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85"
                  transform="translate(0 3.394)"
                >
                  <path
                    d="M497.15 835.749C491.819 829.676 487 820.216 487 811.5a34.5 34.5 0 0 1 62.848-19.669"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722"
                    transform="translate(-481 -772.52)"
                  />
                  <path
                    d="M496.842 835.092C485.225 827.019 482 817.676 482 806.5"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723"
                    transform="translate(-482 -773.52)"
                  />
                  <path
                    d="M487.07 811.534a37.1 37.1 0 0 1 3.167-26.54"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    transform="translate(-481 -769.52)"
                  />
                  <path
                    d="M503.215 782.019a33.124 33.124 0 0 1 23.347-9.5"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                    transform="translate(-481 -772.52)"
                  />
                  <path
                    d="M542.189 791.221c-3.577-2.282-5.2-7.4-11.545-10.889"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                    transform="translate(-486 -775.52)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F"
                  transform="translate(9.746 34.972)"
                >
                  <path
                    d="M559.172 808.355a34.614 34.614 0 1 1-68.426 9.7"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M558.344 804.1c3.985 9.614 4.277 25.473-1.337 35.2"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M554.274 833.642a33.342 33.342 0 0 1-15.22 20.234"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-2"
                    transform="translate(-488.746 -807.099)"
                  />
                  <path
                    d="M526.3 849.96a33.161 33.161 0 0 1-25.036-3.436"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-2"
                    transform="translate(-490.746 -804.099)"
                  />
                  <path
                    d="M497.449 825.125c1.277 2.463.534 4.911 1.233 8.78.289 1.593 2.827 5.225 2.977 6.614"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-2"
                    transform="translate(-490.746 -804.099)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                  transform="translate(17.675)"
                >
                  <path
                    d="M498.675 785.425a34.614 34.614 0 1 1 47.81 49.9"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M499.009 785.382a34.628 34.628 0 0 1 26.054-16.255"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M522.067 774.644a33.341 33.341 0 0 1 25.313.551"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-3"
                    transform="translate(-497.675 -770.127)"
                  />
                  <path
                    d="M551.647 787.841a33.162 33.162 0 0 1 11.821 22.336"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-3"
                    transform="translate(-498.675 -769.127)"
                  />
                  <path
                    d="M548.314 825.76c1.925-3.8 4.951-.487 7.641-10.8"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-3"
                    transform="translate(-495.675 -773.127)"
                  />
                </g>
                <g
                  data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 85 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                  id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_85_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                  transform="translate(15 21.866)"
                >
                  <path
                    d="M542.009 830.43a24.574 24.574 0 1 1-33.949-35.42"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M541.772 830.461A24.59 24.59 0 0 1 523.271 842"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M521.139 838.082c-5.677 2.108-8.263 1.969-13.715-.391"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M504.394 828.716A23.534 23.534 0 0 1 496 812.862"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_2-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M506.761 801.8c-1.367 2.694-4.351 1.766-7.034 8.352"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_3-4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M540.646 790.993a20.447 20.447 0 0 1 6.205 12.84 20.2 20.2 0 0 1-17.769 22.245 19.6 19.6 0 0 1-17.074-7.04"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3722 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3722_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M540.671 791.189A20.366 20.366 0 0 1 550 806.472"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M546.943 803.954a21.976 21.976 0 0 1-.427 15.609"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-2"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M539.26 822.065A18.906 18.906 0 0 1 526.442 829"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-3"
                    transform="translate(-496 -790.993)"
                  />
                  <path
                    d="M517.5 820.111c2.178 1.129 2.844 4.105 11.1 5.85"
                    data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3723 \\u043A\\u043E\\u043F\\u0438\\u044F 4"
                    id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3723_\\u043A\\u043E\\u043F\\u0438\\u044F_4-4"
                    transform="translate(-496 -790.993)"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
